@@ -5,10 +5,11 @@ v0.5.0
   objects similar in operation to the WeeWX accumulators
 - implemented a field_map config item allowing certain JSON output field
   properties to be controlled by the user
-- fields beaufort and currentSolarMax is no longer directly calculated by rtgd
-  but are now populated from WeeWX fields beaufort and maxSolarRad respectively
+- field currentSolarMax is no longer directly calculated by rtgd but is now
+  populated from WeeWX field maxSolarRad
 - field lastRainTipISO is now populated
 - rtgd now logs the rtgd version number on WeeWX startup
+- removed deprecated field Tbeaufort
 v0.4.2
 - fix error in some expressions that include > and < where operands could be
   None
